--- a/Index.html
+++ b/Index.html
@@ -2,30 +2,28 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Google Search</title>
         <link rel="icon" type="image/png" href="Google-Icon.png">
         <link rel="stylesheet" href="Styles.css">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     </head>
     <body>
-        <div class="content">
-            <header class="hlink">
-                <a id=image href="">Google Images Search</a>
-                <a id=advance href="">Google Advanced Search</a>
-            </header>
-            <div class="middle">
-                <div class="Gcenter"><img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt = "Google"></div>
-                <form action="https://google.com/search">
-                    <div class="searchbar">
+        <header class="header-link">
+            <a id=image-link href="">Google Images Search</a>
+            <a id=advance-link href="">Google Advanced Search</a>
+        </header>
+        <div class="main">
+            <form action="https://google.com/search">
+                <img class="Google-image" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt = "Google">
+                <div class="search-bar">
                     <input class="bar" type="text" name="q">
-                    <img class="bar-icon" src="Search-Icon.png" width="30" height="30" alt="Search">
-                    </div>
-                    <div class="inputs">
-                    <input type="submit" name="btnG" value="Google Search">
-                    <input type="submit" name="btnI" value="I'm Feeling Lucky">
-                    </div>
-                </form>
-            </div>
+                </div>
+                <div class="inputs">
+                    <input class="button" type="submit" name="btnG" value="Google Search">
+                    <input class="button" type="submit" name="btnI" value="I'm Feeling Lucky">
+                </div>
+            </form>
         </div>
     </body>
 </html>
