--- a/Image Search.html
+++ b/Image Search.html
@@ -9,13 +9,13 @@
         <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     </head>
-    <body>
+    <body class="content">
         <header class="header-link">
-            <a id=search-link href="Index.html">Google Search</a>
+            <a href="Index.html">Google Search</a>
         </header>
         <div class="main">
             <form action="https://google.com/images" method="get">
-                <img class="Google-image" src="Google-Images-Logo.png" alt = "Google" height="120px" width="300px">
+                <img class="Google-image" src="Google-Images-Logo.png" alt = "Google" height="112px" width="268px">
                 <div class="search-bar">
                     <input class="bar image-search-right-padding" type="text" name="q">
                     <input class="image-search-button-blue" type="submit" value="" >
