--- a/Index.html
+++ b/Index.html
@@ -9,10 +9,10 @@
         <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     </head>
-    <body>
+    <body class="content">
         <header class="header-link">
-            <a id=image-link href="Image.html">Google Images Search</a>
-            <a id=advance-link href="">Google Advanced Search</a>
+            <a id=image-link href="Image Search.html">Google Images Search</a>
+            <a id=advance-link href="Advance Search.html">Google Advanced Search</a>
         </header>
         <div class="main">
             <form action="https://google.com/search">
