Latest Search Update 1.0

--- a/Advance Search.html
+++ b/Advance Search.html
@@ -34,7 +34,7 @@
             <form action="https://google.com/search">
                 <div class="row row-height-1">
                     <div class="col-3 S3"><p>all these words:</p></div>
-                    <input class="col-5 text-box" type="text" name="as_q">
+                    <input class="col-5 text-box" type="text" name="as_q" autofocus>
                 </div>
                 <div class="row row-height-2">
                     <div class="col-3"></div>
